Intempio.Meetings.Home/ClientApp/src/css/custom.css
/* Provide sufficient contrast against white background */
a {
    color: #0366d6;
}

code {
    color: #E01A76;
}

.btn-primary {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

.sessions-item-button {
    width: 100%;
    text-align: right;
}

.sessions-information {
    width: 100%;
}



.loginButton {
    width: 136px;
    height: 46px;
    background: var(--color-surface);
    white-space: nowrap;
    border-radius: 2px;
    border: none;
    text-shadow: none;
    font-style: normal;
    font-weight: bold;
    font-size: 19px;
    line-height: 23px;
    text-align: center;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    color: #FFFFFF;
    cursor: pointer;
}

.login-frame {
    display: inline-grid;
    margin: 10px;
    float: right;
}


    .login-frame input {
        margin-top: 10px;
        padding: 10px;
        width: 350px;
    }

    .login-frame button {
        margin-top: 10px;
    }

.banner-img {
    width: 100%
}


.settings {
    flex-direction: column;
}

.textbox{
    width:100%;
    margin:20px;
}

.button {
    padding: 17px 35px;
    margin: 46px 40px 44px 0;
  
    height: 56px;
    white-space: nowrap;
    font-style: normal;
    font-weight: bold;
    font-size: 19px;
    line-height: 23px;
    text-align: center;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    color: var(--color-surface);
    background: #FFFFFF;
    border: 1px solid var(--color-surface);
    box-sizing: border-box;
    border-radius: 2px;
    text-shadow: none;
    cursor: pointer;
    align-self: center;
}


.settings-item {
    padding: 30px;
    max-width: 824px;
    width: 100%;
    background: #FFFFFF;
    border: 1px solid #CFCFCF;
    box-sizing: border-box;
    border-radius: 2px;
    display: flex;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
}
    .settings-item .recent-info {
        width: 100%;
    }
main .presenters-container .presenter .name {
    margin-top: 0px !important;
    text-transform: none !important;
}

main .presenters-container .presenter .position {
    height: 32px;
    display:block!important;
  
}

.profiletitle{

    cursor:pointer;
}

main .presenters-container {
    display: block !important;
  /*  display: flex !important;*/
}

.popup-close {
    float: right;
    cursor: pointer;
}

.wrapper main .recent-container {
    display: flex !important;
}

main .recent-item p {
    font-size: 18px !important;
    line-height: 20px !important;
    min-height: 40px !important;
    text-transform: none !important;
}

.buttonposter {
    /* margin: 46px 40px 44px 0; */
    margin: 40px 40px 40px 40px;
    width: 210px;
    height: 56px;
    color: #025581;
    background: #fff;
    border: 1px solid #025581;
    box-sizing: border-box;
    border-radius: 2px;
    align-self: center;
}


.modal-video {
    position: absolute;
    top: 40px;
    left: 225px;
    right: 40px;
    bottom: 40px;
    border: 1px solid rgb(204, 204, 204);
    background: rgb(255, 255, 255);
    overflow: auto;
    border-radius: 4px;
    outline: none;
    padding: 20px;
}

.video-frame {
    width: 400px;
    height: 300px;
}

.ReactModal__Overlay ReactModal__Overlay--after-open {
    left: 220px !important;
}


.modal-video {
    position: absolute;
    top: 40px;
    left: 225px;
    right: 40px;
    bottom: 40px;
    border: 1px solid rgb(204, 204, 204);
    background: rgb(255, 255, 255);
    overflow: auto;
    border-radius: 4px;
    outline: none;
    padding: 20px;
}


    main .presenters-container .presenter {
        margin-bottom: 50px !important;
        display: inline-flex !important;
        margin-left: 0px !important;
        margin-right: 20px !important;
    }
.azuremediaplayer {
    width: 400px;
    height: 300px;
}
@media screen and (max-width: 3000px) {




    .video-frame {
        width: 1200px !important;
        height: 600px !important;
    }
    .azuremediaplayer {
        width: 1200px !important;
        height: 600px !important;
    }
}

@media screen and (max-width: 1280px) {
    main .presenters-container .presenter {
        max-width: 440px !important
    }

        main .presenters-container .presenter .socials {
            max-width: 190px !important;
        }

    .video-frame {
        width: 900px !important;
        height: 500px !important;
    }
    .azuremediaplayer {
        width: 900px !important;
        height: 500px !important;
    }
}

@media screen and (max-width: 1024px) {

    main .presenters-container {
        width: 900px !important;
    }

    .wrapper main .recent-container {
        display: none !important;
    }

    .wrapper main .recent-container-swiper > .swiper-wrapper {
        display: none !important;
    }
}

@media screen and (max-width: 600px) {
    .wrapper main .recent-container {
        display: none !important;
    }

    .wrapper main .recent-container-swiper > .swiper-wrapper {
        display: inline-block !important;
    }

    .azuremediaplayer {
        width: 400px !important;
        height: 300px !important;
    }
    main .presenters-container {
        width: 450px !important;
    }

    .video-frame {
        width: 400px !important;
        height: 300px !important;
    }

    h3, .h3 {
        font-size: -14.25rem;
        font-size: 10px;
    }

    .modal-video {
        position: absolute;
        top: 120px;
        left: 5px;
        right: 5px;
        height: 515px;
    }
}


.conversation-number-help-done {
    width: 24px;
    height: 24px;
    border-radius: 50%;
    background: #EEEEEE;
    font-family: Roboto, sans-serif;
    font-style: normal;
    font-weight: bold;
    font-size: 14px;
    line-height: 42px;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    color: #C2C2C2;
}

.conversation-number-help {
    width: 24px;
    height: 24px;
    border-radius: 50%;
    background: #3D998A;
    font-family: Roboto, sans-serif;
    font-style: normal;
    font-weight: bold;
    font-size: 14px;
    line-height: 42px;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    color: #C2C2C2;
}


.wrapper-login {
    margin-left: 0px !important;
}

.bold {
    font-weight: bold !important;
    color: #5E5E5E !important;
    font-size: 18px !important;
}

.italic {
    font-style: italic !important;
    font-weight: 400 !important;
    color: #5E5E5E !important;
    font-size: 18px !important;
}

main .video-content {
    justify-content: center;
    align-items: center;
}

.wrapper main .recent-container.poster-container {
    display: block !important;
    width: 100%;
    text-align: center;
}

    .wrapper main .recent-container.poster-container .recent-item {
        max-width: 23% !important;
        display: inline-block !important;
        margin-bottom: 20px;
        min-width: 360px;
    }


        .wrapper main .recent-container.poster-container .recent-item:first-child {
            margin-left: 20px !important;
            min-width: 360px;
        }

a.skelleton-menu-item {
    color: inherit !important;
    text-decoration: none !important;
}


header .chat-message-owner > .message-wrapper .message-forward {
    padding: 2px 5px;
    align-self: baseline;
    display: flex;
    flex-direction: column;
    border-left: 1px solid #C4C4C4;
}

    header .chat-message-owner > .message-wrapper .message-forward span {
        font-family: Roboto, sans-serif;
        font-style: normal;
        font-weight: normal;
        font-size: 12px;
        line-height: 14px;
        display: flex;
        align-items: center;
        letter-spacing: 0.15px;
        color: #353839;
        margin-top: 5px;
    }

header .chat-message-guest > .message-wrapper > .message > span {
    font-family: Roboto, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 12px;
    line-height: 14px;
    display: flex;
    align-items: center;
    letter-spacing: 0.15px;
    color: #353839;
    margin-top: 5px;
}

header .chat-message-owner > .message-wrapper > .fix {
    display: inline-table !important;
}

header .chat-message-owner > .message-wrapper .message-forward span.name {
    color: black !important;
    font-weight: 400 !important;
}

header .chat-message-owner > .message-wrapper .message-forward span.name {
    color: black !important;
    font-weight: 400 !important;
}

header .chat-message-owner > .message-wrapper > .message > span {
      font-family: Roboto, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 12px;
    line-height: 14px;
    display: flex;
    align-items: center;
    letter-spacing: 0.15px;
    color: #353839;
    margin-top: 5px;

}

header .chat-message-guest > .message-wrapper .message.fix2 {
    align-items: baseline !important;
}

header .chat-message-owner > .message-wrapper > .message > span {
    padding-bottom: 5px !important;
    flex-direction: row-reverse;
    padding-right: 5px;
}


main .presenters-container .presenter:first-child {
    min-height: 400px;
}

main .presenters-container .presenter {
    min-height: 400px;
}

